Tercer Desafío Arrays

--- a/index.html
+++ b/index.html
@@ -4,23 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafío Entregable 2</title>
+    <title>Desafío Entregable 3</title>
     <script defer src="js/index.js"></script>
 </head>
 <body>
     
     <main>
-        <h1>Desafío Entregable 2</h1><br>
+        <h1>Desafío Entregable 3</h1><br>
+        <h2>Definición de un algoritmo en JS que emplee array para agrupar elementos similares</h2><br>
         <p>1-. Abrir <strong style="color: rgb(84, 84, 185);">(DEVTOOLS).</strong></p>
-        <p>2-. Indicar los datos solicitados por los mensajes emergentes del prompt.</p>
-        <p>3-. Dependiendo de los valores ingresados se realizará el cáculo y se dará respuesta con un alert.</p>
-        <p>4-. Para nuevos calculos ingresar la función <strong style="color: rgb(185, 84, 114);">nuevoCalculo()</strong></p><br>
-        <p>Datos del Ejercicio: Calcular el pago a realizar tomando en cuenta el IVA e intereses por número de cuotas a pagar</p><br>
-        <h2>Condiciones del Crédito</h2><br>
-        <p><i>Los montos solicitados deben estar entre 10.000$ y 100.000$, disponibles únicamente en 6 a 12 cuotas.</i></p><br>
-        <p>Cuotas alto riesgo de 6 a 7 meses. | <strong>+10% sobre el IVA.</strong></p>
-        <p>Cuotas de medio riesgo 8 a 9 meses. | <strong>+20% sobre el IVA.</strong></p>
-        <p>Cuotas de bajo riesgo de 10 a 12 meses | <strong>+30% sobre el IVA.</strong></p>
+        <p>2-. Chequear el array <strong style="color: rgb(185, 84, 114);">"Productos"</strong>, debe estar vacío</p>
+        <p>3-. Puede agregar productos de la base de datos con la función <strong style="color: rgb(185, 84, 114);">"dataBase()"</strong></p>
+        <p>4-. Los elementos pueden ser visualizados en forma de tabla mediante el uso de <strong style="color: rgb(185, 84, 114);">"console.table(Productos)"</strong></p>
+        <p>5-. Si desea Cargar productos, puede hacerlo con la función <strong style="color: rgb(185, 84, 114);">"agregarProducto()"</strong>, deberá indicar los datos solicitados por los mensajes emergentes del prompt.</p>
     </main>
 </body>
 </html>
