Funciones de Orden Superior

--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafío Entregable 3</title>
+    <title>1era Entrega de Proyecto Final</title>
+    <script src="js/variables.js"></script>
     <script defer src="js/index.js"></script>
 </head>
 <body>
-    
     <main>
-        <h1>Desafío Entregable 3</h1><br>
-        <h2>Definición de un algoritmo en JS que emplee array para agrupar elementos similares</h2><br>
+        <h1>1era Entrega de Proyecto Final</h1><br>
+        <h2>Incorporando Funciones de Orden Superior</h2><br>
         <p>1-. Abrir <strong style="color: rgb(84, 84, 185);">(DEVTOOLS).</strong></p>
         <p>2-. Chequear el array <strong style="color: rgb(185, 84, 114);">"Productos"</strong>, debe estar vacío</p>
         <p>3-. Puede agregar productos de la base de datos con la función <strong style="color: rgb(185, 84, 114);">"dataBase()"</strong></p>
-        <p>4-. Los elementos pueden ser visualizados en forma de tabla mediante el uso de <strong style="color: rgb(185, 84, 114);">"console.table(Productos)"</strong></p>
-        <p>5-. Si desea Cargar productos, puede hacerlo con la función <strong style="color: rgb(185, 84, 114);">"agregarProducto()"</strong>, deberá indicar los datos solicitados por los mensajes emergentes del prompt.</p>
+        <p>4-. Si desea Cargar productos, puede hacerlo con la función <strong style="color: rgb(185, 84, 114);">"agregarProducto()"</strong>, deberá indicar los datos solicitados por los mensajes emergentes del prompt.</p>
+        <p>5-. Puede filtrar los elementos de la dataBase por nombre y por color con las funciones: <strong style="color: rgb(185, 84, 114);">"filtrarPorNombre()"</strong> y <strong style="color: rgb(185, 84, 114);">"filtrarPorColor()"</strong></p>
+        <p>6-. Puede buscar un número específico de ID por medio de la función <strong style="color: rgb(185, 84, 114);">"buscarId()"</strong></p>        
     </main>
 </body>
 </html>
